defconfig edit and adding logo

--- a/arch/x86/configs/android-x86_64_defconfig
+++ b/arch/x86/configs/android-x86_64_defconfig
@@ -1190,7 +1190,6 @@ CONFIG_NET_SCH_FQ=y
 # CONFIG_NET_SCH_PIE is not set
 CONFIG_NET_SCH_INGRESS=y
 # CONFIG_NET_SCH_PLUG is not set
-# CONFIG_NET_SCH_DEFAULT is not set
 
 #
 # Classification
@@ -1898,7 +1897,7 @@ CONFIG_ATA_BMDMA=y
 CONFIG_ATA_PIIX=y
 # CONFIG_SATA_DWC is not set
 # CONFIG_SATA_MV is not set
-# CONFIG_SATA_NV is not set
+CONFIG_SATA_NV=y
 # CONFIG_SATA_PROMISE is not set
 # CONFIG_SATA_SIL is not set
 CONFIG_SATA_SIS=y
@@ -4848,7 +4847,8 @@ CONFIG_DUMMY_CONSOLE_ROWS=25
 CONFIG_FRAMEBUFFER_CONSOLE=y
 CONFIG_FRAMEBUFFER_CONSOLE_DETECT_PRIMARY=y
 # CONFIG_FRAMEBUFFER_CONSOLE_ROTATION is not set
-# CONFIG_LOGO is not set
+CONFIG_LOGO=y
+CONFIG_LOGO_SUPREMEGAMERS_CLUT224=y
 CONFIG_SOUND=m
 CONFIG_SOUND_OSS_CORE=y
 CONFIG_SOUND_OSS_CORE_PRECLAIM=y
