--- a/drivers/video/logo/Kconfig
+++ b/drivers/video/logo/Kconfig
@@ -23,6 +23,10 @@ config LOGO_LINUX_VGA16
 	bool "Standard 16-color Linux logo"
 	default y
 
+config LOGO_SUPREMEGAMERS_CLUT224
+	bool "224-color SupremeGamers Official logo, visit the forum : https://supreme-gamers.com/"
+	default y
+	
 config LOGO_LINUX_CLUT224
 	bool "Standard 224-color Linux logo"
 	default y
