--- a/init/Kconfig
+++ b/init/Kconfig
@@ -1354,6 +1354,18 @@ config RT_SOFTIRQ_AWARE_SCHED
 	  which may soon block preemptions, such as a CPU running a ksoftirq
 	  thread which handles slow softirqs.
 
+config SCHED_AUTOGROUP_DEFAULT_ENABLED
+	bool "Enable automatic process group scheduling feature"
+	default y
+	depends on SCHED_AUTOGROUP
+	help
+	  If set, automatic process group scheduling will be enabled per
+	  default but can be disabled through passing autogroup=0 on the
+	  kernel commandline during boot or a value of 0 via the file
+	  proc/sys/kernel/sched_autogroup_enabled.
+
+	  If unsure say Y.
+
 config RELAY
 	bool "Kernel->user space relay support (formerly relayfs)"
 	select IRQ_WORK
