Switch to my personal fork of KSU
Support building for Kernel 6.11

Signed-off-by: Huy Minh <buingoc67@gmail.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "KernelSU"]
 	path = KernelSU
-	url = https://github.com/tiann/KernelSU
+	url = https://github.com/hmtheboy154/KernelSU
+	branch = 6.11
